@@ -1,0 +1,17 @@
+#' Tudor dynasty
+#'
+#' Spousal and parent/child relationships among selected members of the Tudor
+#' dynasty, suitable for network analysis.
+#'
+#' @section Variables:
+#'
+#'   \itemize{
+#'
+#'   \item \code{person_1}, \code{person_2}: The two people in the relationship.
+#'
+#'   \item \code{relationship}: The type of relationship. }
+#'
+#' @format A data frame with 35 observations of 3 variables.
+#' @examples
+#' data(tudors)
+"tudors"
