@@ -1,0 +1,5 @@
+library(dplyr)
+library(devtools)
+tudors <- read.csv("data-raw/tudors.csv", stringsAsFactors = FALSE) %>%
+  tbl_df
+use_data(tudors, overwrite = TRUE)
